--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-local-storage": "~0.1.5",
-    "angular-modal-service": "0.6.6"
+    "angular-modal-service": "0.6.6",
+    "angular-jwt": "0.0.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
