--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-touch": "^1.3.0",
     "angular-local-storage": "~0.1.5",
     "angular-modal-service": "0.6.6",
-    "angular-jwt": "0.0.7"
+    "angular-jwt": "0.0.7",
+    "angular-bootstrap": "0.13.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
