--- a/bower.json
+++ b/bower.json
@@ -2,21 +2,24 @@
   "name": "timaxjs-client",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.3.0",
+    "angular": "~1.3.x",
+    "angular-animate": "~1.3.x",
+    "angular-cookies": "~1.3.x",
+    "angular-resource": "~1.3.x",
+    "angular-sanitize": "~1.3.x",
     "bootstrap": "^3.2.0",
-    "angular-animate": "^1.3.0",
-    "angular-cookies": "^1.3.0",
-    "angular-resource": "^1.3.0",
-    "angular-route": "^1.3.0",
-    "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0",
+    "angular-route": "~1.3.x",
+    "angular-touch": "~1.3.x",
     "angular-local-storage": "~0.1.5",
     "angular-modal-service": "0.6.6",
     "angular-jwt": "0.0.7",
     "angular-bootstrap": "0.13.0"
   },
+  "resolutions": {
+    "angular": "~1.3.x"
+  },
   "devDependencies": {
-    "angular-mocks": "^1.3.0"
+    "angular-mocks": "~1.3.x"
   },
   "appPath": "app",
   "moduleName": "timaxjsClientApp"
