--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "repository": {},
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-autoprefixer": "3.0.0",
+    "grunt-autoprefixer": "3.0.1",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
@@ -36,11 +36,11 @@
     "grunt-google-cdn": "^0.4.3",
     "grunt-karma": "*",
     "grunt-newer": "^1.1.0",
-    "grunt-ng-annotate": "0.10.0",
+    "grunt-ng-annotate": "1.0.1",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
-    "jshint-stylish": "^1.0.0",
+    "jshint-stylish": "2.0.0",
     "karma-jasmine": "*",
     "karma-phantomjs-launcher": "*",
     "load-grunt-tasks": "^3.1.0",
