--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "angular-local-storage": "~0.1.5",
     "angular-modal-service": "0.6.6",
     "angular-jwt": "0.0.7",
-    "angular-bootstrap": "0.13.0"
+    "angular-bootstrap": "0.13.0",
+    "socket.io-client": "1.3.5",
+    "angular-socket-io": "0.7.0"
   },
   "resolutions": {
     "angular": "~1.3.x"
