--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-jwt": "0.0.7",
     "angular-bootstrap": "0.13.0",
     "socket.io-client": "1.3.5",
-    "angular-socket-io": "0.7.0"
+    "angular-socket-io": "0.7.0",
+    "angular-growl-v2": "0.7.4"
   },
   "resolutions": {
     "angular": "~1.3.x"
